Добавляет HTML-код на главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
-  </body>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Функциональное питание для котов «Cat Energy»</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" href="styles/styles.css">
+	<script src="scripts/index.js" defer></script>
+</head>
+
+<body class="page__body">
+	<!-- Хэдер -->
+	<header class="header">
+		<a class="header__logo logo" href="#">
+			<img class="logo__image" width="33" height="38" alt="Логотип сайта">
+		</a>
+		<img class="header__company-name" width="" height="" alt="Cat Energy">
+		<p class="visually-hidden">Cat Energy</p>
+		<button class="header__menu-button" type="button"><span class="visually-hidden">Показать меню</span></button>
+		<nav class="header__navigation navigation">
+			<ul class="navigation__list">
+				<li class="navigation__item">Главная</li>
+				<li class="navigation__item">Каталог продукции</li>
+				<li class="navigation__item">Подбор программы</li>
+			</ul>
+		</nav>
+	</header>
+
+	<!-- Основная часть -->
+	<main class="main-part">
+		<h1 class="main-part__title">Функциональное питание для котов</h1>
+
+	</main>
+
+	<!-- Футер -->
+	<footer class="page-footer">
+
+	</footer>
+</body>
+
 </html>
