Исправляет пару мелких ошибок

--- a/source/index.html
+++ b/source/index.html
@@ -14,9 +14,9 @@
     <!-- Хэдер -->
     <header class="header">
       <a class="header__logo logo" href="index.html">
-        <img class="logo__image" width="33" height="38" alt="Логотип сайта">
+        <img class="logo__image" src="" width="33" height="38" alt="Логотип сайта">
       </a>
-      <img class="header__company-name" width="101" height="18" alt="Cat Energy">
+      <img class="header__company-name" src="" width="101" height="18" alt="Cat Energy">
       <p class="visually-hidden">Cat Energy</p>
       <button class="header__menu-button" type="button"><span class="visually-hidden">Показать меню</span></button>
       <nav class="header__navigation navigation">
@@ -81,9 +81,9 @@
       </dl>
       <p class="example__costs">Затраты на питание: 15 000 руб.</p>
       <div class="example__comparison comparison-slider">
-        <img class="comparison-slider__pic comparison-slider__pic--before" src="" width="280" height="256" alt="">
-        <img class="comparison-slider__pic comparison-slider__pic--after" src="" width="280" height="256" alt="">
-        <button class="comparison-slider__toggle"><span class="visually-hidden">Сравнить "до" и "после"</span></button>
+        <img class="comparison-slider__pic comparison-slider__pic--before" src="" width="280" height="256" alt="Внешность кота до начала диеты">
+        <img class="comparison-slider__pic comparison-slider__pic--after" src="" width="280" height="256" alt="Внешность кота после начала диеты">
+        <button class="comparison-slider__toggle" type="button"><span class="visually-hidden">Сравнить "до" и "после"</span></button>
       </div>
     </section>
 
@@ -100,7 +100,7 @@
 
   <!-- Футер -->
   <footer class="footer">
-    <img class="footer__company-name" width="128" height="24" alt="Cat Energy">
+    <img class="footer__company-name" src="" width="128" height="24" alt="Cat Energy">
     <ul class="footer__social-links social-links">
       <li class="social-links__item"><a class="social-links__link social-links__link--vk" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Группа во ВКонтакте</span></a></li>
       <li class="social-links__item"><a class="social-links__link social-links__link--youtube" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Канал на YouTube</span></a></li>
