Добавляет остстки разметки в каталог

--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,6 @@
 				<img src="" width="33" height="38" alt="Логотип сайта">
 			</a>
 			<img class="main-header__company-name" src="" width="101" height="18" alt="Cat Energy">
-			<p class="visually-hidden">Cat Energy</p>
 			<nav class="main-header__navigation navigation">
 				<button class="navigation__menu-toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 				<ul class="navigation__list">
@@ -101,10 +100,10 @@
 
 		<!-- Местоположение компании -->
 		<section class="company-location">
-			<h2 class="company-location__title"></h2>
+			<h2 class="company-location__title">Приглашаем к сотрудничеству дилеров!</h2>
 			<address class="company-location__address company-address">
-				<p class="company-address__street"></p>
-				<p class="company-address__city"></p>
+				<p class="company-address__street">ул. Большая Конюшенная, д. 19/8</p>
+				<p class="company-address__city">Санкт-Петербург</p>
 			</address>
 			<img class="company-location__map" src="" width="" height="" alt="Карта с местоположением компании">
 		</section>
