Почти добавил растровую графику

--- a/source/index.html
+++ b/source/index.html
@@ -96,6 +96,7 @@
       </dl>
       <p class="example__costs">Затраты на питание: 15 000 руб.</p>
       <div class="example__comparison comparison-slider">
+        <picture></picture>
         <img class="comparison-slider__pic comparison-slider__pic--before" src="" width="280" height="256" alt="Внешность кота до начала диеты">
         <img class="comparison-slider__pic comparison-slider__pic--after" src="" width="280" height="256" alt="Внешность кота после начала диеты">
         <button class="comparison-slider__toggle" type="button"><span class="visually-hidden">Ползунок для показа "до" и "после"</span></button>
