Добавляет картинку для слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -96,9 +96,15 @@
       </dl>
       <p class="example__costs">Затраты на питание: 15 000 руб.</p>
       <div class="example__comparison comparison-slider">
-        <picture></picture>
-        <img class="comparison-slider__pic comparison-slider__pic--before" src="" width="280" height="256" alt="Внешность кота до начала диеты">
-        <img class="comparison-slider__pic comparison-slider__pic--after" src="" width="280" height="256" alt="Внешность кота после начала диеты">
+        <picture>
+          <source type="image/png" media="(min-width: 768px)" srcset="images/slider-cat-before-tablet@1x.png 1x, images/slider-cat-before-tablet@2x.png 2x" width="560" height="512">
+          <img class="comparison-slider__pic comparison-slider__pic--before" src="images/slider-cat-before-mobile@1x.png" srcset="images/slider-cat-before-mobile@2x.png 2x" width="280" height="256" alt="Внешность кота до начала диеты">
+        </picture>
+        <picture>
+          <source type="image/png" media="(min-width: 768px)" srcset="images/slider-cat-after-tablet@1x.png 1x, images/slider-cat-after-tablet@2x.png 2x" width="560" height="512">
+          <img class="comparison-slider__pic comparison-slider__pic--after" src="images/slider-cat-after-mobile@1x.png" srcset="images/slider-cat-after-mobile@2x.png 2x" width="280" height="256" alt="Внешность кота после начала диеты">
+        </picture>
+
         <button class="comparison-slider__toggle" type="button"><span class="visually-hidden">Ползунок для показа "до" и "после"</span></button>
       </div>
     </section>
