--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,6 +15,7 @@
 		<a class="main-header__logo" href="index.html">
 			<img src="" width="33" height="38" alt="Логотип сайта">
 		</a>
+
 		<img class="main-header__company-name" src="" width="101" height="18" alt="Cat Energy">
 		<nav class="main-header__navigation navigation">
 			<button class="navigation__menu-toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -45,7 +46,10 @@
 			<ul class="catalog__list">
 				<li class="catalog__item product-card">
 					<a class="product-card__link" href="#">
-						<img class="product-card__image" src="" width="" height="" alt="">
+						<picture>
+							<source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-500-chicken-tablet@1x.png 1x, images/cat-energy-pro-500-chicken-tablet@2x.png 2x" width="161" height="172">
+							<img class="product-card__image" src="images/cat-energy-pro-500-chicken-mobile@1x.png" srcset="images/cat-energy-pro-500-chicken-mobile@2x.png 2x" width="68" height="86" alt="Cat Energy Pro 500 г со вкусом курицы">
+						</picture>
 						<h3 class="product-card__title">Cat Energy Pro<br>500 г</h3>
 					</a>
 					<table class="product-card__specs">
@@ -65,8 +69,13 @@
 					<button class="product-card__order-button" type="button">Заказать</button>
 				</li>
 				<li class="catalog__item product-card">
-					<img class="product-card__image" src="" width="" height="" alt="">
-					<h3 class="product-card__title">Cat Energy Pro<br>1000 г</h3>
+					<a class="product-card__link" href="#">
+						<picture>
+							<source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-1000-chicken-tablet@1x.png 1x, images/cat-energy-pro-1000-chicken-tablet@2x.png 2x" width="161" height="172">
+							<img class="product-card__image" src="images/cat-energy-pro-1000-chicken-mobile@1x.png" srcset="images/cat-energy-pro-1000-chicken-mobile@2x.png 2x" width="68" height="86" alt="Cat Energy Pro 1000 г со вкусом курицы">
+						</picture>
+						<h3 class="product-card__title">Cat Energy Pro<br>1000 г</h3>
+					</a>
 					<table class="product-card__specs">
 						<tr class="product-card__specs-row">
 							<td class="product-card__specs-property">Масса</td>
@@ -84,8 +93,13 @@
 					<button class="product-card__order-button" type="button">Заказать</button>
 				</li>
 				<li class="catalog__item product-card">
-					<img class="product-card__image" src="" width="" height="" alt="">
-					<h3 class="product-card__title">Cat Energy Pro<br>500 г</h3>
+					<a class="product-card__link" href="#">
+						<picture>
+							<source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-500-fish-tablet@1x.png 1x, images/cat-energy-pro-500-fish-tablet@2x.png 2x" width="161" height="172">
+							<img class="product-card__image" src="images/cat-energy-pro-500-fish-mobile@1x.png" srcset="images/cat-energy-pro-500-fish-mobile@2x.png 2x" width="68" height="86" alt="Cat Energy Pro 500 г со вкусом рыбы">
+						</picture>
+						<h3 class="product-card__title">Cat Energy Pro<br>500 г</h3>
+					</a>
 					<table class="product-card__specs">
 						<tr class="product-card__specs-row">
 							<td class="product-card__specs-property">Масса</td>
@@ -103,8 +117,13 @@
 					<button class="product-card__order-button" type="button">Заказать</button>
 				</li>
 				<li class="catalog__item product-card">
-					<img class="product-card__image" src="" width="" height="" alt="">
-					<h3 class="product-card__title">Cat Energy Pro<br>1000 г</h3>
+					<a class="product-card__link" href="#">
+						<picture>
+							<source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-pro-1000-fish-tablet@1x.png 1x, images/cat-energy-pro-1000-fish-tablet@2x.png 2x" width="161" height="172">
+							<img class="product-card__image" src="images/cat-energy-pro-1000-fish-mobile@1x.png" srcset="images/cat-energy-pro-1000-fish-mobile@2x.png 2x" width="68" height="86" alt="Cat Energy Pro 1000 г со вкусом рыбы">
+						</picture>
+						<h3 class="product-card__title">Cat Energy Pro<br>1000 г</h3>
+					</a>
 					<table class="product-card__specs">
 						<tr class="product-card__specs-row">
 							<td class="product-card__specs-property">Масса</td>
@@ -122,7 +141,12 @@
 					<button class="product-card__order-button" type="button">Заказать</button>
 				</li>
 				<li class="catalog__item product-card">
-					<img class="product-card__image" src="" width="" height="" alt="">
+					<a class="product-card__link" href="#">
+						<picture>
+							<source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-slim-500-buckwheat-tablet@1x.png 1x, images/cat-energy-slim-500-buckwheat-tablet@2x.png 2x" width="161" height="172">
+							<img class="product-card__image" src="images/cat-energy-slim-500-buckwheat-mobile@1x.png" srcset="images/cat-energy-slim-500-buckwheat-mobile@2x.png 2x" width="68" height="86" alt="Cat Energy Slim 500 г со вкусом гречки">
+						</picture>
+					</a>
 					<h3 class="product-card__title">Cat Energy Slim<br>500 г</h3>
 					<table class="product-card__specs">
 						<tr class="product-card__specs-row">
@@ -141,7 +165,12 @@
 					<button class="product-card__order-button" type="button">Заказать</button>
 				</li>
 				<li class="catalog__item product-card">
-					<img class="product-card__image" src="" width="" height="" alt="">
+					<a class="product-card__link" href="#">
+						<picture>
+							<source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-slim-1000-buckwheat-tablet@1x.png 1x, images/cat-energy-slim-1000-buckwheat-tablet@2x.png 2x" width="161" height="172">
+							<img class="product-card__image" src="images/cat-energy-slim-1000-buckwheat-mobile@1x.png" srcset="images/cat-energy-slim-1000-buckwheat-mobile@2x.png 2x" width="68" height="86" alt="Cat Energy Slim 1000 г со вкусом гречки">
+						</picture>
+					</a>
 					<h3 class="product-card__title">Cat Energy Slim<br>1000 г</h3>
 					<table class="product-card__specs">
 						<tr class="product-card__specs-row">
@@ -160,7 +189,12 @@
 					<button class="product-card__order-button" type="button">Заказать</button>
 				</li>
 				<li class="catalog__item product-card">
-					<img class="product-card__image" src="" width="" height="" alt="">
+					<a class="product-card__link" href="#">
+						<picture>
+							<source type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-slim-500-rice-tablet@1x.png 1x, images/cat-energy-slim-500-rice-tablet@2x.png 2x" width="161" height="172">
+							<img class="product-card__image" src="images/cat-energy-slim-500-rice-mobile@1x.png" srcset="images/cat-energy-slim-500-rice-mobile@2x.png 2x" width="68" height="86" alt="Cat Energy Slim 500 г со вкусом риса">
+						</picture>
+					</a>
 					<h3 class="product-card__title">Cat Energy Slim<br>500 г</h3>
 					<table class="product-card__specs">
 						<tr class="product-card__specs-row">
@@ -241,7 +275,11 @@
 				<p class="company-address__street">ул. Большая Конюшенная, д. 19/8</p>
 				<p class="company-address__city">Санкт-Петербург</p>
 			</address>
-			<img class="company-location__map" src="" width="" height="" alt="Карта с местоположением компании">
+			<picture>
+				<source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x" width="1440" height="400">
+				<source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x" width="768" height="400">
+				<img class="company-location__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с местоположением компании">
+			</picture>
 		</section>
 	</main>
 
