Стилизация первых текстовых элементов на главной странице

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -224,7 +224,7 @@
 
 		<!-- Дополнительные товары -->
 		<section class="additional-goods">
-			<h2 class="additional-goods__title">Дополнительные товары</h2>
+			<h2 class="additional-goods__title section-heading">Дополнительные товары</h2>
 			<uv class="additional-goods__list">
 				<li class="additional-goods__item additional-good">
 					<h3 class="additional-good__title">Сахарозаменитель</h3>
@@ -258,7 +258,7 @@
 
 		<!-- Акции и новинки -->
 		<section class="subscription">
-			<h2 class="subscription__title">Акции и новинки</h2>
+			<h2 class="subscription__title section-heading">Акции и новинки</h2>
 			<p class="subscription__description">
 				Подпишитесь на наши новости и не пропустите ни одного предложения!
 			</p>
