--- a/source/index.html
+++ b/source/index.html
@@ -79,7 +79,7 @@
 
 		<!-- Особенности -->
 		<section class="features">
-			<h2 class="features__title">Как это работает</h2>
+			<h2 class="features__title section-heading">Как это работает</h2>
 			<ul class="features__list">
 				<li class="features__item">Функциональное питание содержит только полезные питательные вещества.</li>
 				<li class="features__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
@@ -90,7 +90,7 @@
 
 		<!-- Пример -->
 		<section class="example">
-			<h2 class="example__title">Живой пример</h2>
+			<h2 class="example__title section-heading">Живой пример</h2>
 			<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 			<dl class="example__results results">
 				<dt class="results__term">Снижение веса</dt>
